// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`middlewares/url \`method\` option 1`] = `
Object {
  "body": "{\\"id\\":\\"1\\",\\"query\\":\\"\\",\\"variables\\":{}}",
  "headers": Object {
    "Accept": "*/*",
    "Content-Type": "application/json",
  },
  "method": "GET",
  "url": "/get_url",
}
`;

exports[`middlewares/url \`url\` option as string 1`] = `
Object {
  "body": "{\\"id\\":\\"1\\",\\"query\\":\\"\\",\\"variables\\":{}}",
  "headers": Object {
    "Accept": "*/*",
    "Content-Type": "application/json",
  },
  "method": "POST",
  "url": "/some_url",
}
`;

exports[`middlewares/url \`url\` option as thunk 1`] = `
Object {
  "body": "{\\"id\\":\\"1\\",\\"query\\":\\"\\",\\"variables\\":{}}",
  "headers": Object {
    "Accept": "*/*",
    "Content-Type": "application/json",
  },
  "method": "POST",
  "url": "/thunk_url",
}
`;

exports[`middlewares/url \`url\` option as thunk with Promise 1`] = `
Object {
  "body": "{\\"id\\":\\"1\\",\\"query\\":\\"\\",\\"variables\\":{}}",
  "headers": Object {
    "Accept": "*/*",
    "Content-Type": "application/json",
  },
  "method": "POST",
  "url": "/thunk_url_promise",
}
`;
